More pages added plus minor tweaks.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 							<h1 class = "animate_name" data-text ="Jaxon Hornsey">Jaxon Hornsey</h1>
 							<p class = "animate_details" data-text = "Software Developer and Researcher"> Software Developer and Researcher </p>
 							<ul class="actions">
-								<li><a href="#one" class="button scrolly">View Projects</a></li>
+								<!--  <li><a href="#one" class="button scrolly">View Projects</a></li> -->
 							</ul>
 						</div>
 					</section>
@@ -47,7 +47,7 @@
 									<h2>Exploring Efficiency <br>  Amongst Supervised Models</h2>
 									<p> </p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="SupervisedModels.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -59,7 +59,7 @@
 									<h2> Energy Company Database "Mock" </h2>
 								
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="EnergyDB.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -71,7 +71,7 @@
 									<h2>Exploring Optimization Strategies with the Prisoner's Dilemma</h2>
 									
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="PrisonersDilemma.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -119,18 +119,11 @@
 											<a href="mailto: jaxon.hornsey@hotmail.com">jaxon.hornsey@hotmail.com</a>
 										</li>
 
-										<li>
-											<h3>Resume</h3>
-											<ul class="icons">
-												<li><a href="Jaxon_Hornsey_Resume.pdf" class="icon brands 	fa fa-wpforms"><span class="label">GitHub</span></a></li>
-
-											</ul>
-										</li>
 
 										<li>
 											<h3>Socials</h3>
 											<ul class="icons">
-												<li><a href="https://github.com/JackieMoonsGrindTime?tab=overview&from=2022-06-01&to=2022-06-17" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+												<li><a href="https://github.com/JaxonHornsey" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 												<li><a href="https://www.linkedin.com/in/jaxon-hornsey-0830051b0/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 											</ul>
 										</li>
