--- a/WorkInProgress.html
+++ b/WorkInProgress.html
@@ -3,7 +3,7 @@
 
 <html>
 	<head>
-		<title>ThankYou</title>
+		<title>WorkInProgress</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -30,7 +30,7 @@
 				<!-- Main -->
 					<section>
 						<div class="thx_msg" >
-							<h1 class="major" id="thankyou">Thank you for your message!</h1>
+							<h1 class="major" id="thankyou">Currently Unavailable</h1>
 							<!-- <span class="image fit"><img src="images/pic04.jpg" alt="" /></span> -->
 						</div>
 					</section>
