Visual + Responsiveness Tweaks

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/pic1.jpeg" alt="" data-position="center center" /></a>
+							<a href="#" class="image"><img src="images/pic1.jpeg" alt=""  /></a>
 							<div class="content" >
 								
 								<div class="inner" style="opacity: 1;">
@@ -54,7 +54,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic3.jpg" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="images/pic3.jpg" alt=""  /></a>
 							<div class="content">
 								<div class="inner">
 									<h2> Energy Company Database "Mock" </h2>
@@ -66,7 +66,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/prison.jpg" alt="" data-position="25% 25%" /></a>
+							<a href="#" class="image"><img src="images/prison.jpg" alt=""/></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Exploring Optimization Strategies with the Prisoner's Dilemma</h2>
