Responsiveness fixes and colour changes.

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Contact</h2>
-							<p>Got a question? I'd love to hear from you. <br> Send me a message and I'll responds as soon as possible.</p>
+							<p>Got a question? I'd love to hear from you. <br> Send me a message and I'll respond as soon as possible.</p>
 							<div class="split style1">
 								<section>
 									<form method="post" action="https://formsubmit.co/6f588537e0a92c699ba52ba1e2de2cb5">
