--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <!DOCTYPE HTML>
 
+<!--
+	Hyperspace by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+
 <html>
 	<head>
 		<title>Homepage</title>
@@ -141,7 +147,7 @@
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>Jaxon Hornsey &copy; 2022</li>
+						<li>Jaxon Hornsey &copy; 2022 </li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
 			</footer>
